# coin

./: CONTRIBUTING.md  INSTALL.md  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libbitcoinconsensus.pc  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
build_msvc/: README.md
contrib/: README.md  gitian-build.py  install_db4.sh
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gothcoin-conf.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-gothcoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile  Makefile.am  Makefile.in  gothcoin-cli.1  gothcoin-qt.1  gothcoin-tx.1  gothcoin-wallet.1  gothcoind.1
share/: setup.nsi  setup.nsi.in
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.cpp  (+57 more)
(+318 files in other folders)
